--- a/Capstone_TC_CYO_Churn.Rmd
+++ b/Capstone_TC_CYO_Churn.Rmd
@@ -316,11 +316,11 @@ bank_churn_data_tbl %>%
 
 ```
 
-**IsActiveMember effect:** active customers with less activity seem more likely to churn.
+**IsActiveMember effect:** customers with less activity seem more likely to churn, would seem to be common sense.
 
 ## Modeling
 
-We are targeting a numeric variable - Churn (0 or 1). Logistic regression is the chosen algorithm for such a categorization problem. I'd like the ability to choose the **cutoff point** for the model, as I will demonstrate, that financial cost of prediction may outweigh the accuracy of the model.
+We are targeting a numeric variable - Churn (0 or 1). I've chosen Logistic regression for this categorization problem. I'd like the ability to choose the **cutoff point** for the model. As I will demonstrate, that financial cost of prediction may outweigh the value of the accuracy of the model.
 
 I will use a number of algorithms (as part of research, I evaluated more, but choose the four below based largely on accuracy and speed), to model Churn, these are:
 
@@ -472,9 +472,7 @@ telco_churn_density_knn
 
 ```
 
-**KNN density plot:** For an ideal double density plot we want the distribution of scores to be 
-separated, with the score of the negative instances to be on the left and 
-the score of the positive instance to be on the right. In the KNN density plot, we can see that the negative and positives are not well distributed.
+**KNN density plot:** For an ideal double density plot we want the distribution of scores to be separated, with the score of the negative instances to be on the left and the score of the positive instance to be on the right. In the KNN density plot, we can see that the negative and positives are not well distributed.
 
 ### GBM
 
@@ -757,6 +755,8 @@ churned_T_predicted_F <- cost_matrix(churn = 1, pred = 0)
 # assuming loss of a mean CLV per churner
 churned_T_predicted_T <- cost_matrix(churn = 1, pred = 1)
 
+churned_F_predicted_F <- cost_matrix(churn = 0, pred = 0)
+
 
 ft <- churned_F_predicted_T %>% 
   ggplot(aes(type, value, fill = type)) +
@@ -790,7 +790,7 @@ grid.arrange(ft, tf, tt, nrow = 3)
 
 ```
 
-We can see that of our four algorithms, MARS predicted the most customers who would churn (1631), it also predicted a smaller amount of customers where predicted to churn but did not (400), however it predicted the largest amount of customers to churn, but who did not (2139).
+We can see that of our four algorithms, MARS predicted the most customers who would churn, it also predicted a smaller amount of customers where predicted to churn but did not, however it predicted the largest amount of customers to churn, but who did not.
 
 ```{r pred kables, warning=FALSE, echo=FALSE}
 
@@ -890,6 +890,16 @@ bank_cost$cost_of_keeping <- churned_F_predicted_T_cost$cost_of_keeping
 bank_cost <- bank_cost %>% 
   mutate(potential_all_up_saving = clv_saved - clv_lost - cost_of_keeping)
 
+bank_model_all <- churned_T_predicted_T_saving[c(1,3)] %>% 
+  rename(churned_T_predicted_T = value)
+
+bank_model_all$churned_T_predicted_F <-  churned_T_predicted_F_cost$value
+
+bank_model_all$churned_F_predicted_T <- churned_F_predicted_T_cost$value
+
+bank_model_all <- bank_model_all %>% 
+  mutate(model_total = churned_T_predicted_T - churned_T_predicted_F - churned_F_predicted_T)
+
 
 # 
 
@@ -909,7 +919,7 @@ bank_cost %>%
 
 ```
 
-> **Summary:** even though MARS is not the most effective, it could potentially save a bank most money.
+> **Summary:** even though MARS is not the most effective algorithm, in terms of predicting user churn, we have demostrated, it could save a bank most money. 
 
 ## Conclusion
 
@@ -918,7 +928,11 @@ I've been thinking about this cost of modeling for some time now, since I came a
 ```{r kable of cost, echo=FALSE}
 
 bank_cost %>% 
-  kableExtra::kable(caption = "Comparing the Cost of Prediction") %>% 
+  kableExtra::kable(caption = "Comparing the Cost of Prediction in Euro") %>% 
+  kableExtra::kable_styling()
+
+bank_model_all %>% 
+  kableExtra::kable(caption = "Comparing the Cost of Prediction in Customer number") %>% 
   kableExtra::kable_styling()
 
 ```
